openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipam4lab-service
  labels:
    app: ipam4lab
spec:
  selector:
    app: ipam4lab
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
  type: ClusterIP
